--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@clerk/nextjs": "^6.36.5",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@stream-io/node-sdk": "^0.7.32",
+    "@stream-io/video-react-sdk": "^1.30.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
